# docs/swagger.yaml
@@ -15,18 +15,22 @@ definitions:
     - PENDING
     - CONFIRMED
     - FAILED
-    - COMPENSATED
+    - FINAL
+    - PROCESSING
     type: string
     x-enum-varnames:
     - TransactionStatusPending
     - TransactionStatusConfirmed
     - TransactionStatusFailed
-    - TransactionStatusCompensated
+    - TransactionStatusFinalized
+    - TransactionStatusProcessing
   service.AuthRequest:
     properties:
       password:
+        example: demo123!
         type: string
       username:
+        example: player_34633089486
         type: string
     type: object
   shared.BetOperationResponse:
@@ -73,7 +77,6 @@ definitions:
         example: 12344
         type: integer
     required:
-    - amount
     - currency
     - provider_transaction_id
     - provider_withdrawn_transaction_id
@@ -104,7 +107,6 @@ definitions:
     properties:
       amount:
         example: 100
-        minimum: 1
         type: number
       currency:
         allOf:
@@ -122,11 +124,13 @@ definitions:
     enum:
     - REQUEST_VALIDATION_ERROR
     - SERVICE_UNAVAILABLE
+    - INTERNAL_SERVER_ERROR
     - UNAUTHORIZED
     type: string
     x-enum-varnames:
     - ValidationError
     - ServiceUnAvailable
+    - InternalServerError
     - Unauthorized
 host: localhost:3000
 info:
